--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,17 @@
 <!doctype html>
 <html>
-  <head>
-    <base href="/">
-    <meta charset="utf-8">
-    <title>TheAccio</title>
-  </head>
 
-  <body ng-app="app">
-    <ui-view></ui-view>
-  </body>
+<head>
+  <base href="/">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>TheAccio</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
+
+<body ng-app="app">
+  <ui-view></ui-view>
+</body>
+
 </html>
