--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,15 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
   <base href="/">
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>TheAccio</title>
-  <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Kanit|Lato" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+  <title>LMS</title>
+  <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Kanit|Lato|Roboto" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
-
-<body ng-app="app">
+<body ng-app="app" style="font-family:Roboto !important;">
   <ui-view></ui-view>
 </body>
-
 </html>
